swagger docs corrected, photo uploading and retrieving added
