# routes/photoRoutes.js
@@ -3,9 +3,10 @@ const { photo } = require('../controller/photoController');
 const multer = require('../middleware/multerMiddleware');
 const router = Router();
 
-const { addPhoto, listAllPhotos } = photo;
+const { addPhoto, getPhotoById, getAllPhotosOfLocation } = photo;
 
 router.post('/:locationId/photos', multer.single('file'), addPhoto);
-router.get('/:locationId/photos', listAllPhotos);
+router.get('/:locationId/photos/:photoId', getPhotoById);
+router.get('/:locationId/photos', getAllPhotosOfLocation);
 
 module.exports = router;
